<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- FrameLayout to stack the green background and content -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <!-- Green background covering half the screen -->
    <LinearLayout
        android:id="@+id/transactionColor"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:orientation="vertical"
        android:background="@drawable/half_screen_background"
        android:gravity="center" />

    <!-- Content on top of the green background, moved up -->
    <RelativeLayout
        android:id="@+id/remainingContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginTop="20dp"
        android:padding="16dp">


        <TextView
            android:id="@+id/pageTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_centerHorizontal="true"
            android:text="@string/detail_transaction"
            android:textSize="25sp"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/pageTitle"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:text="RM"
            android:textSize="45sp"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/amount"
            android:layout_centerHorizontal="true"
            android:text="YYYY-MM-DD"
            android:textSize="20sp"
            android:textColor="@android:color/white" />


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/date"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:id="@+id/transactionLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="16dp">

            <!-- Type Layout -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type"
                    android:textSize="15sp"
                    android:textColor="@android:color/darker_gray"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/transactionType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expenses"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    android:gravity="center"
                    android:textStyle="bold" />

            </LinearLayout>

            <!-- Category Layout -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category"
                    android:textSize="15sp"
                    android:textColor="@android:color/darker_gray"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shopping"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    android:gravity="center"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/descriptionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="325dp"
        android:text="@string/description"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/descriptionText"
        android:layout_marginTop="14dp"
        android:text="@string/no_description"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/attachmentText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/description"
        android:layout_marginTop="20dp"
        android:text="@string/attachment"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/attachment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/attachmentText"
        android:layout_marginTop="14dp"
        android:contentDescription="Attachment" />

    <TextView
        android:id="@+id/noAttachment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/attachment"
        android:text="@string/no_image_found"
        android:textSize="20sp" />

</RelativeLayout>

    </FrameLayout>

    </RelativeLayout>
