<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_gravity="center"
            android:text="@string/settings"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language"
            android:padding="16dp"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:focusable="true"/>

        <TextView
            android:id="@+id/tv_currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Currency Conversion"
            android:padding="16dp"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tv_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help"
            android:padding="16dp"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:layout_marginTop="16dp"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:focusable="true"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>