<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:padding="16sp">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="50dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/back_arrow"
        android:contentDescription="Back"/>

    <TextView
        android:id="@+id/pageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8sp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:text="@string/history"
        android:textSize="25sp" />


    <CalendarView
        android:id="@+id/calendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="19dp"
        android:layout_below="@id/pageTitle"/>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/calendar"
        android:layout_marginTop="20sp"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:background="@drawable/submit_history_transaction"
        android:text="@string/check_transaction"
        android:textColor="@android:color/black"
        android:padding="10dp" />

    <LinearLayout
        android:id="@+id/bottomNavigationBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:padding="8dp"
        android:background="#FFFFFF"
        android:elevation="4dp">

        <LinearLayout
            android:id="@+id/homeLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="4dp">

            <ImageButton
                android:id="@+id/btnHome"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                android:src="@drawable/home" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:textSize="12sp"
                android:textColor="#404040" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/addLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="4dp">

            <ImageButton
                android:id="@+id/btnAdd"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                android:src="@drawable/add" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:textSize="12sp"
                android:textColor="#404040" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/historyLayout"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="4dp">

            <ImageButton
                android:id="@+id/btnHistory"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                android:src="@drawable/calendar" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history"
                android:textColor="#404040"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/reportLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="4dp">

            <ImageButton
                android:id="@+id/btnReport"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                android:src="@drawable/report" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report"
                android:textSize="12sp"
                android:textColor="#404040" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/profileLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="4dp">

            <ImageButton
                android:id="@+id/btnProfile"
                android:layout_width="50dp"
                android:layout_height="46dp"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                android:src="@drawable/profileicon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                android:textSize="12sp"
                android:textColor="#404040" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>